#97 fixes z-index for dropdown menu (was behind the carousel).

--- a/assets/less/_includes/header.less
+++ b/assets/less/_includes/header.less
@@ -240,7 +240,7 @@ ul.dropdown-menu {
 
       &.active {
         left: 0;
-        z-index: 1;
+        z-index: 3;
       }
 
       li {
